--- a/static/css/products.css
+++ b/static/css/products.css
@@ -160,6 +160,6 @@ input:-webkit-autofill:active {
 .price {
     margin-top: 4px;
     font-weight: 700;
-    font-size: 0.9;
+    font-size: 1.2em;
 }
 
